z-index calendar fix / map legend appearing after initial data call fix

--- a/front-end/src/pages/main-page/main-page.scss
+++ b/front-end/src/pages/main-page/main-page.scss
@@ -8,6 +8,9 @@
 		&__top-row {
 			height: 59%;
 			margin-bottom: 1%;
+			&__chart {
+				z-index: 1000;
+			}
 			&__legend {
 				height: 20%;
 			}
